tests/fixtures/error/error-fixture.js
(
	function () {
		'use-stric'
		module.exports = {
			unknownError: require('./error-unknown')	,
			error404: require('./error-404')	,
		};
	}
)()